# RIM-pytorch

./: LICENSE  README.md  pyproject.toml
RIM_pytorch/: __init__.py  depth_less_transformer.py
tests/: test_rim.py
